added constants (minimum driving speed is now 5mph) and landscape mode and prevented recording when audio is playing

--- a/distracted-driving/distracted-driving/distracted-driving-Info.plist
+++ b/distracted-driving/distracted-driving/distracted-driving-Info.plist
@@ -41,12 +41,14 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
